[package]
name = "evm_with_icp_as_coprocessor_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.14"
ic-cdk-timers = "0.11.0" # Feel free to remove this dependency if you don't need timers
alloy = { git = "https://github.com/ic-alloy/ic-alloy.git", tag = "v0.3.5-icp.1", default-features = false, features = [
  "icp",
  "sol-types",
  "json",
  "contract",
] }
getrandom = { version = "0.2.15", features = ["custom"] }
ethers-core = "2.0.14"
